add google auth

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -8,8 +8,14 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 
+  <link rel="manifest" href="manifest.webmanifest">
+
+  <script src="https://accounts.google.com/gsi/client" async defer></script>
+
+  <meta name="theme-color" content="#1976d2">
 </head>
 <body>
   <app-root></app-root>
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 </html>
